add ListFilters component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -115,6 +115,17 @@
       "backdropWarning": "The {color} icon doesn’t accept backdrops. The icon colors that have backdrops are: {colorsWithBackDrops}"
     },
 
+    "ListFilters": {
+      "moreFilters": "More filters",
+      "filter": "Filter {resourceName}",
+      "noFiltersApplied": "No filters applied",
+      "cancel": "Cancel",
+      "done": "Done",
+      "clearAllFilters": "Clear all filters",
+      "clear": "Clear",
+      "clearLabel": "Clear {filterName}"
+    },
+
     "Modal": {
       "iFrameTitle": "body markup",
       "modalWarning": "These required properties are missing from Modal: {missingProps}"
